--- a/src/main/resources/templates/userCreate.html
+++ b/src/main/resources/templates/userCreate.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorator="layouts/basic">
 <head>
-    <title>Contact Edit</title>
+    <title>Create User</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     
     <style type="text/css">
@@ -21,53 +21,51 @@
     </style>
 </head>
 <body layout:fragment="content">
-	<h1>Contact</h1>
-	<form th:action="@{|/contact/${contact.id}/edit|}" enctype="multipart/form-data" method="POST">
-		<input name="id" type="hidden" th:value="${contact.id}"/>
-		<input name="userId" type="hidden" th:value="${contact.userId}"/>
+	<h1>User</h1>
+	<form th:action="@{|/user/create|}" enctype="multipart/form-data" method="POST">
 			
 		<div class="field">
 			<label for="firstName">First Name</label>
-			<input name="firstName" type="text" th:value="${contact.firstName}"/>
+			<input name="firstName" type="text" th:value="${user.firstName}"/>
 		</div>
 		
 		<div class="field">
 			<label for="lastName">Last Name</label>
-			<input name="lastName" type="text" th:value="${contact.lastName}"/>
+			<input name="lastName" type="text" th:value="${user.lastName}"/>
 		</div>
 		
 		<div class="field">
 			<label for="email">Email</label>
-			<input name="email" type="text" th:value="${contact.email}"/>
+			<input name="email" type="text" th:value="${user.email}"/>
+		</div>
+		
+		<div class="field">
+			<label for="password">Password</label>
+			<input name="password" type="password" th:value="${user.password}"/>
 		</div>
 		
 		<div class="field">
 			<label for="phoneNumber">Phone Number</label>
-			<input name="phoneNumber" type="text" th:value="${contact.phoneNumber}"/>
+			<input name="phoneNumber" type="text" th:value="${user.phoneNumber}"/>
 		</div>
 		
-		<div class="field">
+        <div class="field">
           <label for="twitterHandle">Twitter Handle</label>
-          <input name="twitterHandle" type="text" th:value="${contact.twitterHandle}"/>
+          <input name="twitterHandle" type="text" th:value="${user.twitterHandle}"/>
         </div>
         
         <div class="field">
           <label for="facebookUrl">Facebook URL</label>
-          <input name="facebookUrl" type="text" th:value="${contact.facebookUrl}"/>
+          <input name="facebookUrl" type="text" th:value="${user.facebookUrl}"/>
         </div>
-		
+        
 		<div class="field">
 			<label for="file">Image</label>
 			<input name="file" type="file"/>
 		</div>
 		
-		<div class="field">
-			<label for="removeImage">Remove Image?</label>
-			<input name="removeImage" type="checkbox" value="true"/>
-		</div>
-		
-		<input type="submit" th:value="Update"/>
-		<a href="/contacts" th:href="@{|/contact/${contact.id}|}">Back</a>
+		<input type="submit" th:value="Create"/>
+		<a href="/users" th:href="@{|/users|}">Back</a>
 	</form>
 </body>
 </html>
